--- a/gb/19/9/27/n11550687.md
+++ b/gb/19/9/27/n11550687.md
@@ -1,56 +1,61 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gbotau257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gbotau257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gbotau257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gbotau257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gbotau257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gbotau257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gbotau257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gbotau257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/gbotau257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gbotau257/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gbotau257/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gbotau257/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gbotau257/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>越南非法人口在台旅游 移民署拦车遣返42人</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年09月27日讯】（大纪元记者袁世钢台湾台北报导）<ahref="https://github.com/gbotau257/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E7%BD%B2.md#1">移民署</a>南区事务大队<ahref="https://github.com/gbotau257/djy/blob/master/gb/tag/%E5%8F%B0%E5%8D%97%E5%B8%82.md#1">台南市</a>专勤队日前获报，有数十名<ahref="https://github.com/gbotau257/djy/blob/master/gb/tag/%E8%B6%8A%E5%8D%97.md#1">越南</a>籍非法外来人口组团搭乘游览车到台东及垦丁地区进行三天两夜旅游，移民官伺机拦车查验，一举查获42名越南籍非法外来人口，其中有33名是失联移工，将依法全数遣返。</p>
-<p><ahref="https://github.com/gbotau257/djy/blob/master/gb/tag/%E5%8F%B0%E5%8D%97%E5%B8%82.md#1">台南市</a>专勤队指出，移民官循线逐步锁定游览车动态，利用该团北返要到南投的路途中，掌握最佳查处时机，协调国道公路警察局在国道三号关庙路段拦截游览车，并引导至关庙服务区，车子一停靠，预先布署埋伏的众多移民官立即蜂拥而上，包夹围堵前后车门，原本充满欢乐的车内气氛瞬间急速冻结。</p>
-<p>移民官上车检查过程中，除了有男性非法外来人口一度企图冲撞安全门，甚至还有身材娇小的女子躲藏在游览车座位下，企图躲过移民官的查缉，但因无处可逃，全数束手就擒；移民官一举查获42名<ahref="https://github.com/gbotau257/djy/blob/master/gb/tag/%E8%B6%8A%E5%8D%97.md#1">越南</a>籍非法外来人口，其中有33名是失联移工，全部带回调查在台期间违法情事，并将依规定执行遣返。</p>
-<p>台南市专勤队队长熊德仁表示，<ahref="https://github.com/gbotau257/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E7%BD%B2.md#1">移民署</a>将持续会同相关单位加强查察，遏止违法外来人口滞台从事非法行为歪风，展现严正执法的决心，也呼吁国人千万不要以身试法，一旦贪图便利而触法。</p>
+<p>【大纪元2019年09月27日讯】（大纪元记者袁世钢台湾台北报导）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E7%BD%B2.md#1">移民署</a>南区事务大队<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E5%8D%97%E5%B8%82.md#1">台南市</a>专勤队日前获报，有数十名<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B6%8A%E5%8D%97.md#1">越南</a>籍非法外来人口组团搭乘游览车到台东及垦丁地区进行三天两夜旅游，移民官伺机拦车查验，一举查获42名越南籍非法外来人口，其中有33名是失联移工，将依法全数遣返。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8F%B0%E5%8D%97%E5%B8%82.md#1">台南市</a>专勤队指出，移民官循线逐步锁定游览车动态，利用该团北返要到南投的路途中，掌握最佳查处时机，协调国道公路警察局在国道三号关庙路段拦截游览车，并引导至关庙服务区，车子一停靠，预先布署埋伏的众多移民官立即蜂拥而上，包夹围堵前后车门，原本充满欢乐的车内气氛瞬间急速冻结。</p>
+<p>移民官上车检查过程中，除了有男性非法外来人口一度企图冲撞安全门，甚至还有身材娇小的女子躲藏在游览车座位下，企图躲过移民官的查缉，但因无处可逃，全数束手就擒；移民官一举查获42名<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B6%8A%E5%8D%97.md#1">越南</a>籍非法外来人口，其中有33名是失联移工，全部带回调查在台期间违法情事，并将依规定执行遣返。</p>
+<p>台南市专勤队队长熊德仁表示，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91%E7%BD%B2.md#1">移民署</a>将持续会同相关单位加强查察，遏止违法外来人口滞台从事非法行为歪风，展现严正执法的决心，也呼吁国人千万不要以身试法，一旦贪图便利而触法。</p>
 <p>责任编辑：郑桦</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/19/6/16/n11325962.md#1">感谢外籍移工贡献 移民署为百民渔工健诊</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/19/6/20/n11334678.md#1">提升新住民参与投票  移民署模拟投票教学</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/19/8/24/n11474484.md#1">逾期越南外侨非法打工遭移民署查获</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/19/8/27/n11481066.md#1">网路断线邮轮卡关5小时 移民署：已全力协助</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/9/n12016375.md#1">谭德塞批台湾抹黑他 政院发言人：非事实</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/9/n12016410.md#1">【直播】4.9指挥中心记者会 说明最新疫情</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/9/n12016310.md#1">盼谭德塞拒绝中共 蔡英文：想邀他访台</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/9/n12016332.md#1">史上首度！行政院会改视讯进行 不用Zoom</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/9/n12015713.md#1">【直播回顾】谭德塞大批台湾 外交部回应</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/8/n12014229.md#1">陈时中：武汉是病毒发源地 持以高度警戒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/16/n11325962.md#1">感谢外籍移工贡献 移民署为百民渔工健诊</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/6/20/n11334678.md#1">提升新住民参与投票 移民署模拟投票教学</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/24/n11474484.md#1">逾期越南外侨非法打工遭移民署查获</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/27/n11481066.md#1">网路断线邮轮卡关5小时 移民署：已全力协助</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615635.md#1">接见美代表团 蔡英文：冷眼姑息侵略将制造更多威胁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616028.md#1">拜登派访团来台 苏贞昌：让极权独裁武力侵略者不敢妄动</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615698.md#1">美代表团会见蔡英文 再次保证坚定维持承诺</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613805.md#1">引丘吉尔名言 苏贞昌：选择屈辱仍得面对战争</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614036.md#1">台立委推数通法 促社群平台审查机制透明</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613837.md#1">中共藉俄侵乌对台认知战 议员：欲毁台抵抗意志</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/2/n10356748.md#1" target="_blank">林辉：并未救国的“五四运动”只是胡闹而已</a></li><li><a href="https://github.com/gbotau257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/17/n10403852.md#1" target="_blank">老绥远韩氏：文革阅读经历</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546426.md#1" target="_blank">中共强摘器官证据呈递联合国 媒体聚焦</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/7/n12011319.md#1">《蝙蝠侠》男星班迪特 因中共肺炎并发症去世</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/7/n12009729.md#1">“谁敢戴在脸上？” 代理商揭大陆口罩黑幕</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/7/n12011929.md#1">【一线采访】趁解封赶紧走 武汉数万人出城</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/8/n12013466.md#1">台染疫男童的9接触者有症状 部分检验结果出炉</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/8/n12012723.md#1">任志强被调查 传需向中南海交代</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/6/n12006890.md#1">与陈奕迅合唱曲遭网友批大外宣 蔡依林回应</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/6/n12009067.md#1">港歌手关淑怡退出演艺圈：见识最丑陋一面</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/5/n12005827.md#1">美国天后赞台湾防疫 网红讽中共：有钱买不到</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/7/n12012050.md#1">脸书帖文谈中共病毒名称 黄明志反击五毛围攻</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/7/n12009463.md#1">苏志燮亲自宣布结婚 还捐款帮助弱势儿童</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/2/n11998489.md#1">庚子流年卦 无妄卦示现2020时局</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/6/n12008426.md#1">两个现代人从地府带回来的信息</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/13/2/3/n3792283.md#1">米开朗基罗（3）化腐朽为神奇——《大卫像》</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/7/n12010421.md#1">疫情下行善 美暖男在超市为30名陌生人付账</a></li>
-<li><a href="https://github.com/gbotau257/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/nxaewa3302/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gbotau257/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gbotau257/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/27/n11550687.htm">越南非法人口在台旅游 移民署拦车遣返42人</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/27/n11550687.htm">越南非法人口在台旅游 移民署拦车遣返42人</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/gbotau257/djy/blob/master/gb/19/9/27/n11550687.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gbotau257/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gbotau257/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gbotau257/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gbotau257/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gbotau257/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/9/27/n11550687.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
